# shademachine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  filepath.cpp  filepath.h  filesystem.cpp  filesystem.h  main.cpp  shademachine.cpp  shademachine.h
test/: 01_compute.vk  01_fragment.vk  01_vertex.vk  02_compute.hlsl  02_fragment.hlsl  02_vertex.hlsl  CMakeLists.txt
